--- a/Site/usr/templates/b3-default3/themes/pastels.less
+++ b/Site/usr/templates/b3-default3/themes/pastels.less
@@ -25,7 +25,7 @@
 @basetext-color: #ffffff;
 @active-color: #a5594c;
 @activetext-color: #ffffff;
-@font-color: #414243;
+//@font-color: #414243;
 @alert-color: #94dbae;
 @important-color: #3A6B61;
 @background-light: #f8f1dc;
