(!) Category icon handling improved; global category icon added

--- a/Site/media/css/sobipro.less
+++ b/Site/media/css/sobipro.less
@@ -38,6 +38,21 @@ iframe, svg { max-width: inherit; }
 	font-family: 'FontAwesome';
 }
 
+/* Definition of font sizes for google Material icons */
+.ma-lg {
+	font-size: (4em / 3);
+	line-height: (3em / 4);
+	vertical-align: -15%;
+}
+
+.ma-2x { font-size: 2em; }
+
+.ma-3x { font-size: 3em; }
+
+.ma-4x { font-size: 4em; }
+
+.ma-5x { font-size: 5em; }
+
 @media (min-width: 481px) and (max-width: 979px) {
 	.input-splarge {
 		width: calc(100% - 10px);
