--- a/Site/usr/templates/default4/css/theme.less
+++ b/Site/usr/templates/default4/css/theme.less
@@ -459,6 +459,8 @@ body.modal-open {
 		font-size: calc(@fontsize + 8px);
 		font-weight: 300;
 		border-bottom: 1px solid lighten(@base-color, 50%);
+
+		i { margin-right: 8px; }
 	}
 	.help-block {
 		font-size: calc(@fontsize - 1px);
@@ -2430,7 +2432,7 @@ body.modal-open {
 			&:hover,
 			&:active,
 			&:focus {
-				color: darken(@base-color,5%);
+				color: darken(@base-color, 5%);
 			}
 		}
 	}
