(#) Deleting a template from within section redirects to section configuration (Issue #45)

--- a/Admin/template/info.xml
+++ b/Admin/template/info.xml
@@ -110,6 +110,7 @@
 			<field name="option" default="com_sobipro"/>
 			<field name="task" default=""/>
 			<field name="templateNewName" default=""/>
+			<field name="pid" value="sid" />
 		</hidden>
 	</config>
 </definition>
