template design defaults to standard

--- a/Site/usr/templates/default4/css/theme.less
+++ b/Site/usr/templates/default4/css/theme.less
@@ -24,7 +24,7 @@
 @fontsize: 14px;
 @font-color: #3e3e3e;
 @back-color: #ffffff;
-@design: elevated;
+@design: standard;
 
 //-------------------------------------------------------------------------------------*/
 
